[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0196078, 0.027451, 0.0509804, 1)

[node name="StateContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DebugOverlay" type="CanvasLayer" parent="."]
layer = 100

[node name="FPSLabel" type="Label" parent="DebugOverlay"]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 30.0
text = "FPS: 60"

[node name="DebugLabel" type="Label" parent="DebugOverlay"]
offset_left = 10.0
offset_top = 30.0
offset_right = 300.0
offset_bottom = 50.0
text = "Debug: F3=Toggle"
